--- a/viewer/package.json
+++ b/viewer/package.json
@@ -35,5 +35,15 @@
     "vite": "^4.4.2",
     "vitest": "^0.34.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "bits-ui": "^0.9.8",
+    "clsx": "^2.0.0",
+    "formsnap": "^0.4.1",
+    "lucide-svelte": "^0.292.0",
+    "sveltekit-superforms": "^1.10.2",
+    "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.18",
+    "zod": "^3.22.4"
+  }
 }
