--- a/promptbox/summarize.pb.toml
+++ b/promptbox/summarize.pb.toml
@@ -4,6 +4,7 @@ template_path = "summarize.liquid"
 [model]
 model = "zephyr"
 temperature = 0.7
+max_tokens = 1000
 # Also supports top_p, frequency_penalty, presence_penalty, stop, and max_tokens
 
 [options]
