--- a/promptbox/promptbox.toml
+++ b/promptbox/promptbox.toml
@@ -9,3 +9,5 @@ yarn-mistral = "yarn-mistral:7b-128k-q5_K_M"
 zephyr = "zephyr:7b-beta-q5_K_M"
 nous-hermes = "nous-hermes:13b-llama2-q5_K_M"
 orca-mini = "orca-mini:13b-v3-q5_K_M"
+openhermes = "openhermes2.5-mistral:7b-q5_K_M"
+mistrallite = "mistrallite:7b-v0.1-q5_K_M"
