--- a/promptbox/summarize.pb.toml
+++ b/promptbox/summarize.pb.toml
@@ -2,9 +2,10 @@ description = "Summarize some files"
 template_path = "summarize.liquid"
 
 [model]
-model = "zephyr"
+model = "gpt-3.5-turbo-1106"
+# model = "mistrallite"
 temperature = 0.7
-max_tokens = 1000
+max_tokens = 2000
 # Also supports top_p, frequency_penalty, presence_penalty, stop, and max_tokens
 
 [options]
