--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -41,3 +41,6 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
 url = "2.5.0"
 uuid = "1.6.1"
+
+[dev-dependencies]
+temp-dir = "0.1.13"
