--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,9 @@
     "test:watch": "vitest watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.27.4",
+    "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/kit": "^2.5.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
@@ -27,13 +27,13 @@
     "postcss-load-config": "^4.0.1",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
-    "svelte": "^4",
+    "svelte": "^5.0.0-next.82",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vitest": "^0.34.6"
+    "vite": "^5.2.6",
+    "vitest": "^1.4.0"
   },
   "type": "module",
   "dependencies": {
@@ -41,11 +41,9 @@
     "clsx": "^2.0.0",
     "execa": "^8.0.1",
     "filigree-web": "file:../../filigree/web",
-    "formsnap": "^0.4.1",
     "globby": "^14.0.0",
-    "lucide-svelte": "^0.292.0",
     "pkg-up": "^5.0.0",
-    "sveltekit-superforms": "^1.10.2",
+    "svelte-ux": "^0.62.2",
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "zod": "^3.22.4"
