--- a/filigree/models/video.toml
+++ b/filigree/models/video.toml
@@ -29,6 +29,21 @@ type = "int"
 nullable = true
 
 [[fields]]
+name = "author"
+type = "text"
+nullable = true
+
+[[fields]]
+name = "date"
+type = "date"
+nullable = true
+
+[[fields]]
+name = "metadata"
+type = "json"
+nullable = true
+
+[[fields]]
 name = "read"
 type = "boolean"
 default_sql = "false"
