--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -32,6 +32,7 @@ serde_json = "1.0.113"
 serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
 sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
 sqlx-transparent-json-decode = "2.2.0"
+temp-dir = "0.1.13"
 tera = "1.19.1"
 thiserror = "1.0.56"
 time = "0.3.34"
