--- a/filigree/models/video.toml
+++ b/filigree/models/video.toml
@@ -13,11 +13,6 @@ type = "text"
 nullable = true
 
 [[fields]]
-name = "images"
-type = "json"
-nullable = true
-
-[[fields]]
 name = "title"
 type = "text"
 nullable = true
@@ -53,6 +48,17 @@ indexed = true
 name = "progress"
 type = "int"
 default_sql = "0"
+
+[[fields]]
+name = "images"
+type = "json"
+rust_type = "crate::models::video::VideoImages"
+nullable = true
+
+[[fields]]
+name = "transcript"
+type = "json"
+nullable = true
 
 [[fields]]
 name = "summary"
