--- a/filigree/models/video.toml
+++ b/filigree/models/video.toml
@@ -1,53 +1,71 @@
 name = "Video"
-endpoints = true
+endpoints = { create = false, update = true, get = true, list = true, delete = true }
 allow_id_in_create = true
 
 [[fields]]
 name = "processing_state"
 type = "text"
 rust_type = "crate::models::video::VideoProcessingState"
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "url"
 type = "text"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "title"
 type = "text"
 nullable = true
+owner_access = "read_write"
+user_access = "read"
 
 [[fields]]
 name = "duration"
 description = "Duration in seconds"
 type = "int"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "author"
 type = "text"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "date"
 type = "date"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "metadata"
 type = "json"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "read"
 type = "boolean"
 default_sql = "false"
 indexed = true
+owner_access = "read_write"
+user_access = "read"
 
 [[fields]]
 name = "progress"
 type = "int"
 default_sql = "0"
+owner_access = "read_write"
+user_access = "read"
 
 [[fields]]
 name = "images"
@@ -55,21 +73,29 @@ type = "json"
 omit_in_list = true
 rust_type = "crate::models::video::VideoImages"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "transcript"
 type = "json"
 omit_in_list = true
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "summary"
 description = "Generated summary of the video"
 type = "text"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
 [[fields]]
 name = "processed_path"
 type = "text"
 nullable = true
+owner_access = "read"
+user_access = "read"
 
