--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,6 +12,7 @@ axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
 axum-extra = { version = "0.9.2", features = ["query"] }
 axum-jsonschema = "0.8.0"
 axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
+backon = "0.4.3"
 bytes = "1.5.0"
 chrono = "0.4.33"
 clap = { version = "4.4.11", features = ["env", "derive"] }
