Use prettierd for formatting, set zod_type on some fields

--- a/filigree/config.toml
+++ b/filigree/config.toml
@@ -20,7 +20,7 @@ dotenv = true
 hosts = ["localhost"]
 
 [formatter]
-js = ["biome", "format", "--stdin-file-path=stdin.ts" ]
+js = ["prettierd", "stdin.ts" ]
 rust = ["rustfmt", "+nightly"]
 sql = ["pg_format"]
 
