--- a/web/package.json
+++ b/web/package.json
@@ -15,38 +15,35 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^5.0.1",
-    "@sveltejs/kit": "^2.5.4",
+    "@sveltejs/kit": "^2.5.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "prettier": "^3.0.0",
-    "prettier-plugin-svelte": "^3.0.0",
-    "svelte": "^5.0.0-next.82",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^4.0.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "svelte": "5.0.0-next.90",
+    "svelte-check": "^3.6.8",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.7",
     "vitest": "^1.4.0"
   },
   "type": "module",
   "dependencies": {
     "@deepgram/sdk": "^3.2.0",
-    "bits-ui": "^0.9.8",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "execa": "^8.0.1",
     "filigree-web": "file:../../filigree/web",
-    "globby": "^14.0.0",
-    "pkg-up": "^5.0.0",
-    "svelte-ux": "^0.62.2",
-    "tailwind-merge": "^2.0.0",
-    "tailwind-variants": "^0.1.18",
+    "svelte-ux": "^0.62.5",
+    "tailwind-merge": "^2.2.2",
+    "tailwind-variants": "^0.1.20",
     "zod": "^3.22.4"
   }
 }
