--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -30,6 +30,7 @@ percent-encoding = "2.3.1"
 reqwest = { version = "0.11.23", features = ["cookies", "json"] }
 rust-embed = "8.1.0"
 schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
+schemars-zod = "0.1.5"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.113"
 serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
@@ -46,7 +47,6 @@ tower-cookies = "0.10.0"
 tower-http = { version = "0.5.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
-ts-rs = { version = "8.1.0", features = ["serde-compat", "chrono-impl", "serde-json-impl", "url-impl", "uuid-impl", "import-esm"] }
 url = "2.5.0"
 uuid = "1.6.1"
 
