--- a/web/package.json
+++ b/web/package.json
@@ -17,18 +17,18 @@
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.5.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.38",
-    "postcss-load-config": "^4.0.2",
+    "postcss-load-config": "^5.0.3",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
-    "svelte": "5.0.0-next.90",
-    "svelte-check": "^3.6.8",
+    "svelte": "5.0.0-next.92",
+    "svelte-check": "^3.6.9",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
@@ -38,12 +38,13 @@
   "type": "module",
   "dependencies": {
     "@deepgram/sdk": "^3.2.0",
+    "@mdi/js": "^7.4.47",
     "clsx": "^2.1.0",
     "execa": "^8.0.1",
     "filigree-web": "file:../../filigree/web",
-    "svelte-ux": "^0.62.5",
+    "svelte-ux": "^0.62.6",
     "tailwind-merge": "^2.2.2",
-    "tailwind-variants": "^0.1.20",
+    "tailwind-variants": "^0.2.1",
     "zod": "^3.22.4"
   }
 }
