--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -49,6 +49,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
 url = "2.5.0"
 uuid = "1.6.1"
+webp = "0.2.7"
 
 [dev-dependencies]
 temp-dir = "0.1.13"
