--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -20,8 +20,9 @@ dotenvy = "0.15.7"
 effectum = "0.6.0"
 error-stack = { version = "0.4.1", features = ["spantrace"] }
 eyre = "0.6.11"
-filigree = { git = "https://github.com/dimfeld/filigree.git" }
-#filigree = { path = "../../filigree/filigree" }
+#filigree = "0.0.3"
+#filigree = { git = "https://github.com/dimfeld/filigree.git" }
+filigree = { path = "../../filigree/filigree", features = ["sentry"] }
 futures = "0.3.30"
 http = "1.0.0"
 hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
@@ -32,6 +33,8 @@ reqwest = { version = "0.11.23", features = ["cookies", "json"] }
 rust-embed = "8.1.0"
 schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
 schemars-zod = "0.1.5"
+sentry = { version = "0.32.2", features = ["tokio", "tower", "tower-http", "tower-axum-matched-path", "tracing"] }
+sentry-tower = { version = "0.32.2", features = ["http", "axum-matched-path"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.113"
 serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
