--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 async-trait = "0.1.75"
 axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
 axum-extra = { version = "0.9.2", features = ["query"] }
+axum-htmx = "0.5.0"
 axum-jsonschema = "0.8.0"
 axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
 backon = "0.4.3"
@@ -28,6 +29,7 @@ http = "1.0.0"
 hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
 image = "0.25.0"
 image-compare = "0.4.0"
+maud = { version = "0.26.0", features = ["axum"] }
 percent-encoding = "2.3.1"
 reqwest = { version = "0.11.23", features = ["cookies", "json"] }
 rust-embed = "8.1.0"
@@ -59,4 +61,16 @@ webp = "0.2.7"
 temp-dir = "0.1.13"
 
 [profile.dev.package.sqlx-macros]
+opt-level = 3
+
+[profile.dev.package.maud_macros]
+opt-level = 3
+
+[profile.dev.package.image]
+opt-level = 3
+
+[profile.dev.package.image-compare]
+opt-level = 3
+
+[profile.dev.package.webp]
 opt-level = 3
