--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 
 [dependencies]
 async-trait = "0.1.75"
+atomic = "0.6.0"
 axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
 axum-extra = { version = "0.9.2", features = ["query"] }
 axum-htmx = "0.5.0"
@@ -27,6 +28,7 @@ filigree = { path = "../../filigree/filigree", features = ["sentry"] }
 futures = "0.3.30"
 http = "1.0.0"
 hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
+hypertext = { version = "0.5.0", features = ["axum"] }
 image = "0.25.0"
 image-compare = "0.4.0"
 maud = { version = "0.26.0", features = ["axum"] }
@@ -50,7 +52,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = { version = "0.1.15", features = ["fs"] }
 tower = "0.4.13"
 tower-cookies = "0.10.0"
-tower-http = { version = "0.5.1", features = ["full"] }
+tower-http = { version = "0.5.1", features = ["compression-full", "full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
 url = "2.5.0"
@@ -63,7 +65,7 @@ temp-dir = "0.1.13"
 [profile.dev.package.sqlx-macros]
 opt-level = 3
 
-[profile.dev.package.maud_macros]
+[profile.dev.package.hypertext-macros]
 opt-level = 3
 
 [profile.dev.package.image]
