--- a/htmx/package.json
+++ b/htmx/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.8"
   },
