--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,12 +8,12 @@ publish = false
 
 [dependencies]
 async-trait = "0.1.75"
-atomic = "0.6.0"
 axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
 axum-extra = { version = "0.9.2", features = ["query"] }
 axum-htmx = "0.5.0"
 axum-jsonschema = "0.8.0"
 axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
+# axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
 backon = "0.4.3"
 bytes = "1.5.0"
 chrono = "0.4.33"
@@ -28,10 +28,10 @@ filigree = { path = "../../filigree/filigree", features = ["sentry"] }
 futures = "0.3.30"
 http = "1.0.0"
 hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
-hypertext = { version = "0.5.0", features = ["axum"] }
 image = "0.25.0"
 image-compare = "0.4.0"
 maud = { version = "0.26.0", features = ["axum"] }
+md-icons = { version = "0.3.2", features = ["maud"] }
 percent-encoding = "2.3.1"
 reqwest = { version = "0.11.23", features = ["cookies", "json"] }
 rust-embed = "8.1.0"
@@ -65,13 +65,16 @@ temp-dir = "0.1.13"
 [profile.dev.package.sqlx-macros]
 opt-level = 3
 
-[profile.dev.package.hypertext-macros]
+[profile.dev.package.maud_macros]
 opt-level = 3
 
 [profile.dev.package.image]
 opt-level = 3
 
 [profile.dev.package.image-compare]
+opt-level = 3
+
+[profile.dev.package.tokio]
 opt-level = 3
 
 [profile.dev.package.webp]
