--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@alpinejs/morph": "^3.13.8",
     "alpinejs": "^3.13.8",
     "htmx.org": "^1.9.11",
     "prettier": "^3.2.5"
