--- a/filigree/pages.toml
+++ b/filigree/pages.toml
@@ -12,10 +12,16 @@ permission = "Video:write"
 
 [[pages.actions]]
 name = "video_status"
-path = "video_status/:id"
+path = "videos/:id"
 params.id = "VideoId"
 method = "GET"
 permission = "Video:read"
+
+[[pages.actions]]
+name = "delete_video"
+path = "videos/:id"
+method = "DELETE"
+permission = "Video:write"
 
 [[pages.actions]]
 name = "rerun_stage"
@@ -31,6 +37,7 @@ params.id = "crate::models::video::VideoId"
 method = "post"
 input.read = "boolean"
 permission = "Video:write"
+
 
 [[pages]]
 path = "/docs/:doc_id"
