--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ dotenvy = "0.15.7"
 effectum = "0.6.0"
 error-stack = { version = "0.4.1", features = ["spantrace"] }
 eyre = "0.6.11"
-filigree = { version = "0.1.0", features = ["sentry", "htmx", "maud", "watch-manifest"] }
+# filigree = { version = "0.1.0", features = ["sentry", "htmx", "maud", "watch-manifest"] }
 #filigree = { git = "https://github.com/dimfeld/filigree.git" }
-#filigree = { path = "../filigree/filigree", features = ["sentry"] }
+filigree = { path = "../filigree/filigree", features = ["sentry", "htmx", "maud", "watch-manifest"] }
 futures = "0.3.30"
 http = "1.0.0"
 hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
